# agent-eval

./: CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  action.yml  mkdocs.yml  pyproject.toml
benchmarks/: README.md  bench_metric_correlation.py  bench_multi_step.py  bench_statistical_power.py  compare.py  conftest.py
benchmarks/datasets/: __init__.py  eval_dataset.py
benchmarks/results/: baseline.json  multi_step_baseline.json  statistical_power_baseline.json
docs/: UPGRADE_TO_AGENTEVAL.md  architecture.md  index.md  migrate-from-deepeval.md
examples/: 01_quickstart.py  02_configuration.py  03_custom_metrics.py  04_baseline_comparison.py  05_integration_agentcore.py  06_langchain_eval.py  07_crewai_eval.py  README.md  use_with_deepeval.py
src/agent_eval/: __init__.py  convenience.py
src/agent_eval/adapters/: __init__.py  anthropic_sdk.py  autogen.py  callable.py  crewai.py  http.py  langchain.py  microsoft_agents.py  openai_agents.py
src/agent_eval/adversarial/: __init__.py  robustness_tiers.py  tier_evaluator.py
src/agent_eval/cascade/: __init__.py  analyzer.py  dependency_graph.py  report.py
src/agent_eval/cli/: main.py
src/agent_eval/conversational/: __init__.py  conversational_metrics.py
src/agent_eval/core/: __init__.py  agent_wrapper.py  config.py  evaluator.py  exceptions.py  gate.py  report.py  runner.py  suite.py
src/agent_eval/evaluators/: __init__.py  accuracy.py  cost.py  format.py  latency.py  llm_judge.py  safety.py
src/agent_eval/gap/: __init__.py  gap_detector.py  trace_loader.py
src/agent_eval/gates/: __init__.py  composite.py  threshold.py
src/agent_eval/integrations/: __init__.py  deepeval_adapter.py
src/agent_eval/leaderboard/: __init__.py  ranking.py  storage.py  submission.py
src/agent_eval/plugins/: __init__.py  registry.py
src/agent_eval/protocol/: __init__.py  eval_protocol.py  importers.py
src/agent_eval/pytest_plugin/: __init__.py  baseline.py  context.py  fixtures.py  markers.py  multi_run.py  plugin.py  report.py  scaffold.py  similarity.py
src/agent_eval/reporting/: __init__.py  console_report.py  html_report.py  json_report.py  markdown_report.py
src/agent_eval/statistical/: __init__.py  metrics.py  report.py  runner.py
src/agent_eval/suites/: __init__.py  builder.py  loader.py
src/agent_eval/suites/builtin/: __init__.py  qa_basic.yaml  safety_basic.yaml  tool_use_basic.yaml
tests/: conftest.py  test_quickstart.py
tests/test_adversarial/: test_robustness_tiers.py  test_tier_evaluator.py
tests/test_cascade/: test_analyzer.py  test_dependency_graph.py  test_report.py
tests/test_conversational/: test_conversational_metrics.py
tests/test_gap/: test_gap_detector.py  test_trace_loader.py
tests/test_integrations/: conftest.py  test_deepeval_adapter.py
tests/test_protocol/: test_eval_protocol.py  test_importers.py
tests/test_statistical/: test_metrics.py  test_report.py  test_runner.py
tests/unit/: test_adapters.py  test_adapters_new.py  test_agent_wrapper_and_runner.py  test_config.py  test_coverage_boost.py  test_evaluator_core.py  test_evaluators_accuracy.py  test_evaluators_cost.py  test_evaluators_format.py  test_evaluators_init.py  test_evaluators_latency.py  test_evaluators_llm_judge.py  test_evaluators_safety.py  test_exceptions.py  test_gates.py  test_leaderboard.py  test_plugins_registry.py  test_pytest_plugin.py  test_pytest_plugin_scaffold.py  test_report.py  test_reporting.py  test_similarity_scoring.py  test_suite.py  test_suites.py
typescript/: README.md  package-lock.json  package.json
typescript/src/: client.ts  index.ts  metrics.ts  types.ts
typescript/tests/: client.test.ts
